--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@firestarter/contracts",
-  "author": "Norswap",
+  "name": "@gridlock/contracts",
+  "author": "Gridlock Team",
   "license": "BSD-3-Clause-Clear",
   "version": "1.0.0",
   "files": [
