--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@tanstack/react-query": "^5.24.6",
+        "clsx": "^2.1.0",
         "connectkit": "^1.7.2",
         "daisyui": "^4.7.2",
         "next": "^14.1.0",
