--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -13,6 +13,7 @@
         "clsx": "^2.1.0",
         "connectkit": "^1.7.2",
         "daisyui": "^4.7.2",
+        "jotai": "^2.7.1",
         "next": "^14.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
